@@ -32,6 +32,11 @@ class RDoc::Markup::ToAnsi < RDoc::Markup::ToRdoc
             when :BULLET then
               2
             when :NOTE, :LABEL then
+              if @prefix then
+                @res << @prefix.strip
+                @prefix = nil
+              end
+
               @res << "\n" unless res.length == 1
               2
             else
@@ -51,7 +56,7 @@ class RDoc::Markup::ToAnsi < RDoc::Markup::ToRdoc
              when :BULLET then
                '*'
              when :NOTE, :LABEL then
-               attributes(list_item.label) + ":\n"
+               attributes(list_item.label).strip + ":\n"
              else
                @list_index.last.to_s + '.'
              end
